# telemetry-logger

./: .cursorrules  .gitignore  API.md  BACKEND_SETUP.md  CHANGELOG.md  CONTRIBUTING.MD  DATABASE_SETUP.md  DEPLOYMENT.md  Dockerfile  LICENSE  PROJECT_SUMMARY.md  PR_DB_WRITER.md  PR_EXPORT_REPLAY.md  PR_FRONTEND_DASHBOARD.md  PR_GPS_SERVICE.md  PR_OBD_SERVICE.md  PR_PACKING_MESHTASTIC.md  PR_SUMMARY.md  PR_USER_DOCUMENTATION.md  README.md  TESTING_STRATEGY.md  USER_SETUP_GUIDE.md  alembic.ini  cartelem.db  docker-compose.yml  env.example  main.py  pyproject.toml  requirements.txt  run_dev.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
DOCS/: ARCHITECTURE.md  BACKLOG.md  CURSOR_PROMPTS.md  PROJECT_BRIEF.md  SCOPE.md
alembic/: env.py
alembic/versions/: 14ac193f0a78_initial_migration_create_sessions_.py  37467b2aefe1_add_device_profiles_and_setup_models.py  7ccb75e24e2d_add_started_stopped_utc_to_sessions.py  924dde4e403a_add_is_active_to_sessions.py  ec1b6b326a9f_add_notes_to_sessions.py
backend/app/: config.py  main.py
backend/app/api/: routes_devices.py  routes_export.py  routes_health.py  routes_sessions.py  routes_setup.py  routes_telemetry.py  routes_ws.py
backend/app/db/: __init__.py  base.py  crud.py  models.py
backend/app/services/: db_writer.py  gps_service.py  manager.py  meshtastic_service.py  obd_service.py  websocket_bus.py
backend/app/utils/: __init__.py  packing.py  schemas.py
frontend/: README.md  docs.html  index.html  replay.html  setup.html
frontend/css/: styles.css
frontend/js/: app.js  charts.js  map.js  replay.js  setup.js
scripts/: __init__.py  init_db.py  test_meshtastic.py
tests/: __init__.py  test_db_migrations.py  test_db_writer.py  test_device_profile_persistence.py  test_devices.py  test_e2e_data_pipeline.py  test_e2e_frontend_integration.py  test_e2e_telemetry_flow.py  test_export.py  test_frontend_button_visibility.py  test_frontend_device_scanning.py  test_frontend_session_creation.py  test_frontend_telemetry_controls.py  test_gps_service.py  test_health.py  test_obd_service.py  test_packing.py  test_session_creation_integration.py  test_sessions.py  test_setup.py  test_telemetry_controls.py  test_websocket.py
